# Syllable

./: README.md
apps/internet/abrowse-0.3/: Makefile  Makefile.am  Makefile.cvs  Makefile.in  acinclude.m4  aclocal.m4  config.h.bot  config.h.in  configure  configure.files  configure.in  configure.in.in  libtool  subdirs
apps/internet/abrowse-0.3/admin/: Makefile.common  acinclude.m4.in  am_edit  config.guess  config.sub  debianrules
apps/internet/abrowse-0.3/konq-embed/: Makefile.am  Makefile.cvs  Makefile.in
apps/internet/abrowse-0.3/konq-embed/dropin/: Makefile.am  dcopclient.cpp  dcopclient.h  dcopobject.cpp  dcopobject.h  kaboutdata.h  kaction.cpp  kaction.h  kapp.cpp  kapp.h  kcmdlineargs.cpp  kcmdlineargs.h  kconfig.cpp  kconfig.h  kcursor.h  kdebug.cpp  kdialog.cpp  kdialog.h  kdialogbase.cpp  kdialogbase.h  kfiledialog.h  kglobal.cpp  kglobal.h  kglobalsettings.cpp  kglobalsettings.h  kiconeffect.h  kiconloader.cpp  kiconloader.h  kinstance.cpp  kinstance.h  klibloader.cpp  klibloader.h  klistbox.h  klocale.cpp  klocale.h  kmessagebox.cpp  kmessagebox.h  kprocess.h  kstaticdeleter.h  kstdaction.cpp  (+9 more)
apps/internet/abrowse-0.3/konq-embed/kdesrc/: Makefile.am  Makefile.in
apps/internet/abrowse-0.3/konq-embed/src/: .cvsignore  .mainwindow.cc.swn  .mainwindow.cc.swo  .mainwindow.cc.swp  .mainwindow.h.swp  Makefile.am  downloaddialog.cpp  downloaddialog.h  main.cpp  searchdialog.cpp  searchdialog.h  statusbar.cpp  statusbar.h  toolbar.cpp  toolbar.h  utils.cpp  utils.h
apps/internet/abrowse-0.3/qt-2.3.0/: ANNOUNCE  INSTALL  Makefile  README  configure  src-mt.mk
apps/internet/abrowse-0.3/qt-2.3.0/configs/: aix-g++-shared  aix-g++-shared-debug  aix-g++-static  aix-g++-static-debug  aix-xlc-shared  aix-xlc-shared-debug  aix-xlc-static  aix-xlc-static-debug  atheos-g++-static  dgux-g++-shared  dgux-g++-shared-debug  dgux-g++-static  dgux-g++-static-debug  dynix-g++-static  dynix-g++-static-debug  freebsd-g++-shared  freebsd-g++-shared-debug  freebsd-g++-static  freebsd-g++-static-debug  hpux-acc-shared  hpux-acc-shared-debug  hpux-acc-static  hpux-acc-static-debug  hpux-g++-shared  hpux-g++-shared-debug  hpux-g++-static  hpux-g++-static-debug  hpux-n64-shared  hpux-n64-shared-debug  hpux-n64-static  hpux-n64-static-debug  hurd-g++-shared  hurd-g++-shared-debug  hurd-g++-static  hurd-g++-static-debug  irix-64-shared  irix-64-shared-debug  irix-64-static  irix-64-static-debug  irix-g++-shared  (+73 more)
apps/internet/abrowse-0.3/qt-2.3.0/src/: Makefile.in  qt.pro
apps/internet/abrowse-0.3/qt-2.3.0/tools/: Makefile  Makefile.in
system/: Makeconf  (+4 more)
system/apps/gnu/fileutils-4.1/man/: Makefile  Makefile.am  Makefile.in  chgrp.1  chmod.1  chown.1  cp.1  dd.1  df.1  dir.1  dircolors.1  du.1  ginstall.1  ln.1  ls.1  mkdir.1  mkfifo.1  mknod.1  mv.1  rm.1  rmdir.1  shred.1  sync.1  touch.1  vdir.1
system/apps/gnu/fileutils-4.1/src/: Makefile  Makefile.am  Makefile.in  copy.c  dircolors.h  du.c
system/apps/gnu/findutils-4.1/: Makefile  Makefile.am  Makefile.in  acconfig.h  config.cache  config.h  config.h.in  config.status  configure  configure.in  stamp-h  stamp-h.in
system/apps/gnu/findutils-4.1/doc/: Makefile  Makefile.am  Makefile.in  find.info  find.info-1  find.info-2  find.texi
system/apps/gnu/findutils-4.1/find/: Makefile  Makefile.am  Makefile.in  fstype.c  parser.c  pred.c
system/apps/gnu/findutils-4.1/lib/: Makefile  Makefile.am  Makefile.in  listfile.c  nextelem.c
system/apps/gnu/findutils-4.1/locate/: Makefile  Makefile.am  Makefile.in  code.c  locate.c
system/apps/gnu/findutils-4.1/testsuite/: Makefile  Makefile.am  Makefile.in
system/apps/gnu/findutils-4.1/xargs/: Makefile  Makefile.am  Makefile.in  xargs.c
system/apps/gnu/sed-4.0.7/: BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  THANKS  aclocal.m4  bootstrap.sh  bootstrap.sh.in  config_h.in  configure  configure.ac
system/apps/gnu/sed-4.0.7/doc/: Makefile.in  sed-in.texi  sed.1  sed.info  sed.info-1  sed.info-2  sed.texi  version.texi
system/apps/gnu/sed-4.0.7/intl/: Makefile.in
system/apps/gnu/sed-4.0.7/lib/: Makefile.am  Makefile.in  getline.c  regcomp.c  regex.c  regex_internal.c  regex_internal.h  regexec.c  utils.c  utils.h
system/apps/gnu/sed-4.0.7/po/: Makefile.in.in  POTFILES.in  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  eo.gmo  eo.po  es.gmo  es.po  et.gmo  et.po  fi.gmo  fi.po  fr.gmo  fr.po  gl.gmo  gl.po  he.gmo  he.po  hr.gmo  hr.po  hu.gmo  hu.po  id.gmo  id.po  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  ko.po  nl.gmo  nl.po  (+17 more)
system/apps/gnu/sed-4.0.7/sed/: Makefile.am  Makefile.in  compile.c  execute.c  fmt.c  regex.c  sed.c  sed.h
system/apps/gnu/sed-4.0.7/testsuite/: Makefile.am  Makefile.in  Makefile.tests
system/apps/gnu/sh-utils-2.0/: Makefile  Makefile.am  Makefile.in  README  THANKS  TODO  acconfig.h  aclocal.m4  config.cache  config.h  config.h.in  config.status  configure  configure.in
system/apps/gnu/sh-utils-2.0/doc/: Makefile  Makefile.am  Makefile.in  sh-utils.info  stamp-vti
system/apps/gnu/sh-utils-2.0/intl/: Makefile  po2tbl.sed
system/apps/gnu/sh-utils-2.0/lib/: Makefile  Makefile.am  Makefile.in  getdate.c
system/apps/gnu/sh-utils-2.0/m4/: Makefile  Makefile.in
system/apps/gnu/sh-utils-2.0/man/: Makefile  Makefile.am  Makefile.in  Makefile.maint  Makefile.summ  basename.1  chroot.1  date.1  dirname.1  echo.1  env.1  expr.1  false.1  groups.1  hostid.1  hostname.1  id.1  logname.1  nice.1  nohup.1  pathchk.1  pinky.1  printenv.1  printf.1  pwd.1  sleep.1  stty.1  su.1  tee.1  test.1  true.1  tty.1  uname.1  users.1  who.1  whoami.1  yes.1
system/apps/gnu/sh-utils-2.0/po/: Makefile  Makefile.in  POTFILES  POTFILES.in  cat-id-tbl.c  cs.gmo  cs.po  de.gmo  de.po  el.gmo  el.po  es.gmo  es.po  fr.gmo  fr.po  it.gmo  it.po  nl.gmo  nl.po  no.gmo  no.po  pl.gmo  pl.po  pt.gmo  pt.po  pt_BR.gmo  pt_BR.po  ru.gmo  ru.po  sh-utils.pot  sk.gmo  sk.po  sv.gmo  sv.po  zh.gmo  zh.po
system/apps/gnu/textutils-2.0.21/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.hin  config.status  configure  configure.ac
(+6759 files in other folders)
